<resources>
    <string name="app_name">AILD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_add_alarm">Add an alarm</string>
    <string name="pick_an_alarm_sound">Pick an alarm sound</string>
    <string name="save">Save</string>
    <string name="enter_alarm_title">Enter Alarm Title</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="test_alarmsound">Test Sound</string>
    <string name="stop">Stop</string>
    <string name="are_you_dreaming">Are you dreaming?</string>
    <string name="dismiss">Dismiss</string>
    <string-array name="sound_array">
        <item>BetterDays</item>
        <item>OnceAgain</item>
        <item>SlowMotion</item>
        <item>Tomorrow</item>
    </string-array>
    <string name="journal_title">Title: %s</string>
</resources>